--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="./assets/favicon-32x32.png"
     />
     <title>Frontend Mentor | QR code component</title>
+    <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
     <main>
