--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
   </head>
   <body>
     <main>
-      <figure>
-        <img src="./assets/image-qr-code.png" alt="qr code" />
-        <figcaption>
-          <h1>Improve your front-end skills by building projects</h1>
-          <p>
+      <figure class="QRcode-card">
+        <img
+          class="QRcode-card__image"
+          src="./assets/image-qr-code.png"
+          alt="qr code"
+        />
+        <figcaption class="QRcode-card__caption">
+          <h1 class="QRcode-card__title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="QRcode-card__description">
             Improve your front-end skills by building projects Scan the QR code
             to visit Frontend Mentor and take your coding skills to the next
             level
