--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="./assets/favicon-32x32.png"
     />
     <title>Frontend Mentor | QR code component</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
   <body>
@@ -25,9 +31,8 @@
             Improve your front-end skills by building projects
           </h1>
           <p class="QRcode-card__description">
-            Improve your front-end skills by building projects Scan the QR code
-            to visit Frontend Mentor and take your coding skills to the next
-            level
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
           </p>
         </figcaption>
       </figure>
